--- a/notes.tex
+++ b/notes.tex
@@ -2449,45 +2449,6 @@ v \in N(A - \lambda I_n) \\
 \end{align*}
 \end{sol}
 
-\noindent\textbf{Example:} Let $C^\infty(\mathbb{R}) = \{f : \mathbb{R} \to \mathbb{R} : f^{(n)} \text{ exists for every }n \in \mathbb{Z}^+\}$. Then $C^\infty(\mathbb{R})$ is a subspace of $\mathcal{F}(\mathbb{R}, \mathbb{R})$. Let $T : C^\infty(\mathbb{R}) \to C^\infty(\mathbb{R})$, $T(f) = f'$. Find all eigen values of $T$. 
-
-\textit{Solution.} We know $f$ is an eigenvector if $f \neq 0$ and $Tf = \lambda f$ for some $\lambda \in \mathbb{R}$. So, $f' = \lambda f$ implies $\frac{df}{dx} = \lambda f$ implies $\frac{df}{f} = \lambda dx$ implies $ln(f) = \lambda x + C$ implies $| f | = e^{\lambda x + C}$ implies $f(x) = Le^{\lambda x}$ for some $L \in \mathbb{R}$ and $L \neq 0$. All $\lambda \in \mathbb{R}$ are eigenvalues. 
-
-\noindent\textbf{Example:} Let $T : M_{2 \times 2}(\mathbb{R}) \to M_{2 \times 2}(\mathbb{R})$ be defined by $T(A) = A^T$. Is $T$ diagonalizable?
-
-\textit{Solution.} Let $\alpha = \left\{ \begin{pmatrix}
-1 & 0 \\ 0 & 0
-\end{pmatrix}, \begin{pmatrix}
-0 & 1 \\ 0 & 0
-\end{pmatrix}, \begin{pmatrix}
-0 & 0 \\ 1 & 0
-\end{pmatrix}, \begin{pmatrix}
-0 & 0 \\ 0 & 1
-\end{pmatrix} \right\} = \{e_1, e_2, e_3, e_4\}$. So, $$\begin{bmatrix}
-T
-\end{bmatrix}_\alpha = \begin{pmatrix}
-1 & 0 & 0 & 0 \\ 0 & 0 & 1 & 0 \\ 0 & 1 & 0 & 0 \\ 0 & 0 & 0 & 1
-\end{pmatrix}$$ is not diagonalizable. We need to find the eigenvalues of $T$. If $\lambda$ is an eigenvalue, then $T(A) = \lambda A$ for some $A \neq 0$. Then, $T^2(A) = T(T(A)) = \lambda^2A$. Thus, $\lambda^2A = A \neq 0$. So, $\lambda = \pm 1$.
-\begin{itemize}
-    \item[($\lambda = 1$):] Then $T(A) = A$ and $T(A) = A^T$. Thus, $A = A^T$ is a symmetric matrix. Let $\left\{ \begin{pmatrix}
-    1 & 0 \\ 0 & 0
-    \end{pmatrix}, \begin{pmatrix}
-    0 & 0 \\ 0 & 1
-    \end{pmatrix}, \begin{pmatrix}
-    0 & 1 \\ 1 & 0
-    \end{pmatrix} \right\} = \{f_1, f_2, f_3\}$. 
-    
-    \item[($\lambda = -1$):] Then $T(A) = -A$ and $T(A) = A^T$. So, $A^T = -A$ is a skew-symmetric matrix. Let $\left\{ \begin{pmatrix}
-    0 & 1 \\ -1 & 0
-    \end{pmatrix} \right\} = \{f_4\}$.
-\end{itemize}
-Then $\beta = \{f_1, f_2, f_3, f_4\}$ is a basis of eigenvectors of $T$. Then $T(f_1) = f_1,$, $T(f_2) = f_2$, $T(f_3) = f_3$, and $T(f_4) = f_4$ implies $$\begin{pmatrix}
-1 & 0 & 0 & 0 \\
-0 & 1 & 0 & 0 \\
-0 & 0 & 1 & 0 \\
-0 & 0 & 0 & 1 \\
-\end{pmatrix}.$$
-
 \begin{definition}{3} \text{ }
 \begin{itemize}
     \item Let $A \in M_{n \times n}(\mathbb{F})$. Then $f(t) = det(A - t I_n)$ is called the \textit{characteristic polynomial} of $A$.
@@ -2529,11 +2490,117 @@ Let $A \in M_{n \times n}(\mathbb{F})$.
 Let $T$ be a linear operator on $V$ and let $\lambda$ be an eigenvalue of $T$. A vector $v \in V$ is an eigenvector of $T$ corresponding to $\lambda$ if and only if $v \neq 0$ and $v \in N(T - \lambda I)$.
 \end{theorem}
 
+\noindent\textbf{Example:} Let $C^\infty(\mathbb{R}) = \{f : \mathbb{R} \to \mathbb{R} : f^{(n)} \text{ exists for every }n \in \mathbb{Z}^+\}$. Then $C^\infty(\mathbb{R})$ is a subspace of $\mathcal{F}(\mathbb{R}, \mathbb{R})$. Let $T : C^\infty(\mathbb{R}) \to C^\infty(\mathbb{R})$, $T(f) = f'$. Find all eigen values of $T$. 
+
+\textit{Solution.} We know $f$ is an eigenvector if $f \neq 0$ and $Tf = \lambda f$ for some $\lambda \in \mathbb{R}$. So, $f' = \lambda f$ implies $\frac{df}{dx} = \lambda f$ implies $\frac{df}{f} = \lambda dx$ implies $ln(f) = \lambda x + C$ implies $| f | = e^{\lambda x + C}$ implies $f(x) = Le^{\lambda x}$ for some $L \in \mathbb{R}$ and $L \neq 0$. All $\lambda \in \mathbb{R}$ are eigenvalues. 
+
+\noindent\textbf{Example:} Let $T : M_{2 \times 2}(\mathbb{R}) \to M_{2 \times 2}(\mathbb{R})$ be defined by $T(A) = A^T$. Is $T$ diagonalizable?
+
+\textit{Solution.} Let $\alpha = \left\{ \begin{pmatrix}
+1 & 0 \\ 0 & 0
+\end{pmatrix}, \begin{pmatrix}
+0 & 1 \\ 0 & 0
+\end{pmatrix}, \begin{pmatrix}
+0 & 0 \\ 1 & 0
+\end{pmatrix}, \begin{pmatrix}
+0 & 0 \\ 0 & 1
+\end{pmatrix} \right\} = \{e_1, e_2, e_3, e_4\}$. So, $$\begin{bmatrix}
+T
+\end{bmatrix}_\alpha = \begin{pmatrix}
+1 & 0 & 0 & 0 \\ 0 & 0 & 1 & 0 \\ 0 & 1 & 0 & 0 \\ 0 & 0 & 0 & 1
+\end{pmatrix}$$ is not diagonalizable. We need to find the eigenvalues of $T$. If $\lambda$ is an eigenvalue, then $T(A) = \lambda A$ for some $A \neq 0$. Then, $T^2(A) = T(T(A)) = \lambda^2A$. Thus, $\lambda^2A = A \neq 0$. So, $\lambda = \pm 1$.
+\begin{itemize}
+    \item[($\lambda = 1$):] Then $T(A) = A$ and $T(A) = A^T$. Thus, $A = A^T$ is a symmetric matrix. Let $\left\{ \begin{pmatrix}
+    1 & 0 \\ 0 & 0
+    \end{pmatrix}, \begin{pmatrix}
+    0 & 0 \\ 0 & 1
+    \end{pmatrix}, \begin{pmatrix}
+    0 & 1 \\ 1 & 0
+    \end{pmatrix} \right\} = \{f_1, f_2, f_3\}$. 
+    
+    \item[($\lambda = -1$):] Then $T(A) = -A$ and $T(A) = A^T$. So, $A^T = -A$ is a skew-symmetric matrix. Let $\left\{ \begin{pmatrix}
+    0 & 1 \\ -1 & 0
+    \end{pmatrix} \right\} = \{f_4\}$.
+\end{itemize}
+Then $\beta = \{f_1, f_2, f_3, f_4\}$ is a basis of eigenvectors of $T$. Then $T(f_1) = f_1,$, $T(f_2) = f_2$, $T(f_3) = f_3$, and $T(f_4) = f_4$ implies $$\begin{pmatrix}
+1 & 0 & 0 & 0 \\
+0 & 1 & 0 & 0 \\
+0 & 0 & 1 & 0 \\
+0 & 0 & 0 & 1 \\
+\end{pmatrix}.$$
+
+\noindent\textbf{Example:} Let $A \in M_{2 \times 2}(\mathbb{F})$ be defined as $\begin{pmatrix}
+1 & 1 \\ 4 & 1
+\end{pmatrix}$. Find the eigenvectors of $A$.
+
+\textit{Solution.}
+\begin{itemize}
+    \item Finding the eigenvalues of $A$, we have \begin{align*}
+        f_A(t) &= \left|\begin{array}{cc}
+           1-t  & 1 \\
+            4 & 1-t
+        \end{array}
+        \right| \\
+        &= (1-t)^2 - 4 \\
+        &= (t-3)(t+1).
+    \end{align*}
+    So, the eigenvalues of $A$ are $\lambda_1 = 3$ and $\lambda_2 = -1$.
+    
+    
+    \item Finding the eigenvectors of $A$, we have,
+        \begin{itemize}
+        \item[$\lambda_1$:] We have $A - 3I = \begin{pmatrix}
+        -2 & 1 \\ 4 & -2
+        \end{pmatrix}$. So, $(A - 3I)\begin{pmatrix}
+        x_1 \\ x_2
+        \end{pmatrix} = 0$ implies $\begin{pmatrix}
+        -2 & 1 \\ 4 & -2
+        \end{pmatrix}\begin{pmatrix}
+        x_1 \\ x_2
+        \end{pmatrix} = 0$ implies $x_1 = t$ and $x_2 = 2t$. Thus, $N(A - \lambda_1 I) = \left\{ t \begin{pmatrix}
+        1 \\ 2
+        \end{pmatrix} : t \in \mathbb{R} \right\}$. 
+        
+        \item[$\lambda_2$:] We have $A + I = \begin{pmatrix}
+        2 & 1 \\ 4 & 2
+        \end{pmatrix}$. So, $(A + I)\begin{pmatrix}
+        x_1 \\ x_2
+        \end{pmatrix} = 0$ implies $\begin{pmatrix}
+        2 & 1 \\ 4 & 2
+        \end{pmatrix}\begin{pmatrix}
+        x_1 \\ x_2
+        \end{pmatrix} = 0$ implies $x_1 = t$ and $x_2 = -2t$. Thus, $N(A - \lambda_1 I) = \left\{ t \begin{pmatrix}
+        1 \\ -2
+        \end{pmatrix} : t \in \mathbb{R} \right\}$. 
+    \end{itemize}
+\end{itemize}
+Now, is $A$ diagonalizable? Yes. For $\beta = \left\{ \begin{pmatrix}
+1 \\ 2
+\end{pmatrix}, \begin{pmatrix}
+1 \\ -2
+\end{pmatrix} \right\}$, we have $\begin{bmatrix}
+L_A
+\end{bmatrix}_\beta = \begin{pmatrix}
+3 & 0 \\ 0 & -1
+\end{pmatrix}$.
+
 \subsection{Diagonalizability}
 
 \begin{theorem}{5.5}
 Let $T$ be a linear operator with distinct eigenvalues $\lambda_1, \dots, \lambda_k$. If $v_1, \dots, v_k$ are eigenvectors of $T$ such that $v_i$ corresponds to $\lambda_i$, then $\{v_1, \dots, v_k\}$ is linearly independent. 
 \end{theorem}
+
+\textit{Proof.}
+Let $\lambda_1, \dots, \lambda_k$ be distinct eigenvalues.
+\begin{itemize}
+    \item[Base Step:] If $k = 1$, then $v_1 \neq 0$ implies $v_1$ is linearly independent.
+    
+    \item[Induction Step:] Suppose $v_1, \dots, v_{k-1}$ is linearly independent. Suppose $\sum_{i = 1}^k c_iv_i = 0$ for some $c_i \in \mathbb{F}$. Then $$(T-\lambda_k I)\left( \sum_{i = 1}^kc_iv_i \right) = (T - \lambda_k I)(0) = 0.$$ Thus, \begin{align*}
+        0 &= \sum_{i = 1}^k c_i(T - \lambda_k I)(v_i) \\
+        &= \sum_{i = 1}^k c_i(\lambda_i - \lambda_k)(v_i) \tag{Since $T(v_i) = \lambda_iv_i$} \\
+        &= \sum_{i = 1}^{k-1} c_i(T - \lambda_k I)(v_i).
+    \end{align*} Since $v_1, \dots, v_{k-1}$ is linearly independent, then $c_i(\lambda_i - \lambda_k) = 0$. Thus, $c_i = 0$ for $i = 1, \dots, k-1$ since $\lambda_i \neq \lambda_k$ if $i < k$. Thus, $c_kv_k = 0$ and $v_k \neq 0$ implies $c_k = 0$ and $v_1, \dots, v_k$ is linearly independent. \qed
+\end{itemize} 
 
 \begin{corollary}{6}
 If $T$ has $n$ distinct eigenvalues, then $T$ is diagonalizable.
@@ -2546,6 +2613,45 @@ A polynomial $f(t) \in P(\mathbb{F})$ splits over $\mathbb{F}$ if $f(t) = c(t - 
 \begin{theorem}{5.6}
 Let $T$ be a linear operator. If $T$ is diagonalizable, then its characteristic polynomial splits.
 \end{theorem}
+
+\begin{sol}
+Suppose $T$ is diagonalizable. Then there exists $\beta = \{ v_1, \dots, v_n \}$ such that $v_i$ is an eigenvector of $T$, say $T(v_j) = \lambda_j v_j$. Consequently, $A = \begin{bmatrix}
+T
+\end{bmatrix}_\beta = I\lambda_i$ and so \begin{align*}
+    f_T(t) &= f_A(t) \\
+    &= (\lambda_1 - t) \dots (\lambda_n - t)  \\
+    &= (-1)^{n + 1}(t - \lambda_1)\dots (t - \lambda_n).
+\end{align*} Therefore, $f_T(t)$ splits.
+\end{sol}
+
+\begin{lemma}{8}
+Let $X \in M_{n \times n}(\mathbb{F})$ such that $X = \begin{pmatrix}
+A & B \\ 0 & C
+\end{pmatrix}$ for $A \in M_{m \times m}(\mathbb{F})$, $B \in M_{m \times p}(\mathbb{F})$, and $C \in M_{p \times p}(\mathbb{F})$. Then $det(X) = det(A)det(C)$.
+\end{lemma}
+
+\begin{sol}
+\begin{itemize}
+    \item Suppose $C = I_p$. We will use induction on $p$. The base case is clearly true. Suppose $p \geq 2$. Use the expansion of the last row. Then $det(X) = (-1)^{n + n} \cdot 1 \cdot det\left( \begin{pmatrix}
+    A & B' \\ 0 & I_{p-1}
+    \end{pmatrix} \right)$ where $B'$ is obtained from $B$ by deleting the last column. Then, by the inductive hypothesis, $det(X) = det(A)det(I_{p-1}) = det(A)$. Thus, $det(X) = det(A)det(C)$.
+    
+    \item Suppose $A = I_m$, then use the first column. Thus, $det(X) = det(A)det(C)$.
+    
+    \item For the general case, 
+    \begin{itemize}
+        \item If $det(A) = 0$, then the columns of $A$ are linearly dependent. Then the first $m$ columns of $X$ are linearly dependent. Thus, $det(X) = 0 = det(A)det(C)$.
+        
+        \item If $det(A) \neq 0$, then $A$ is invertible. Then, $$X = \begin{pmatrix}
+        A & B \\ 0 & C
+        \end{pmatrix} = \begin{pmatrix}
+        A & 0 \\ 0 & I_p
+        \end{pmatrix}\begin{pmatrix}
+        I_m & A^{-1}B \\ 0 & C
+        \end{pmatrix}.$$ Therefore, $det(X) = det(A)det(C)$.
+    \end{itemize}
+\end{itemize}
+\end{sol}
 
 \begin{definition}{5}
 The (algebraic) \textit{multiplicity} of an eigenvalue $\lambda$ is the largest positive integer $k$ such that $(t - \lambda)^k | f(t)$.
@@ -2565,6 +2671,22 @@ Let $\lambda$ be an eigenvalue of $T$ of multiplicity $m$. Then $$1 \leq dim(E_\
     \lambda I_p & B \\ 0 & C
     \end{pmatrix}.$$
 \end{itemize}
+
+\begin{sol}
+Let $k = dim(E_\lambda)$ and let $\{ v_1, \dots, v_k\}$ be a basis for $E_\lambda$. Extend the basis to a basis $\beta = \{v_1, \dots, v_k, v_{k-1}, \dots, v_n\}$ for $V$. Then $T(v_j) = \lambda v_j$ for $j = 1, \dots, k$. So, $$A = \begin{bmatrix}
+T
+\end{bmatrix}_\beta = \begin{pmatrix}
+\lambda I_k & B \\ 0 & C
+\end{pmatrix}.$$ Therefore, \begin{align*}
+    f_T(t) &= f_A(t) \\
+    &= \left|\begin{array}{cc}
+        (\lambda - t)I_k & B \\
+        0 & C
+    \end{array}\right| \\
+    &= det((\lambda - t)I_k)det(C - tI_{n-k}) \tag{By Lemma 8} \\
+    &= (-1)^k(t - \lambda)^kg(t).
+\end{align*} Thus, $(t - \lambda)^k | f_T(t)$ and $k \leq m$.
+\end{sol}
 
 \begin{lemma}{9}
 Let $\lambda_1, \dots, \lambda_k$ be distinct eigenvalues of $T$ and let $v_i \in E_{\lambda_i}$. If $v_1 + \dots + v_k = 0$, then $v_i = 0$ for every $i$.
